# zsql

./: Cargo.toml  LICENSE  Makefile  README  README.md
.github/workflows/: CICD.yml
src/: csv_loader.rs  lib.rs  sql_engine.rs  sql_preproc.rs
test/fixtures/: oscar_age.csv
