[package]
name = "tmsql"
version = "0.1.0"
edition = "2018"
authors = ["Zizaco <zizaco@gmail.com>"]
homepage = "https://github.com/Zizaco"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
clap = "3.0.0-beta.4"
regex = "1.5"
csv = "1.1.6"
rusqlite = { version = "0.25.3", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
