[package]
name = "zsql"
version = "0.0.1"
edition = "2018"
authors = ["Zizaco <zizaco@gmail.com>"]
homepage = "https://github.com/Zizaco"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
clap = "3.0.0-beta.4"
regex = "1.5"
rusqlite = { version = "0.25.3", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
color-eyre = "0.5"
